# maplink-samples

./: .gitignore  README.md  azure-pipelines.yml
DirectImportSDK/: Circle.shp  Circle.sld  README.txt  x11DirectImportExample.cpp
Qt/: README.md  maplinkqtdefs.pri
Qt/3DEarth/QtEarthSample/: MapLink.qrc  main.cpp  mainwindow.cpp  mainwindow.h  qtearthsample.pro  qtearthsample.rc  qtearthsample.ui  resource.h
Qt/3DEarth/QtEarthSample/interactions/: Interactionmoderequest.cpp  Interactionmoderequest.h  MapLink3DIMode.h  cameramanager.cpp  cameramanager.h  createpolygoninteraction.cpp  createpolygoninteraction.h  createpolylineinteraction.cpp  createpolylineinteraction.h  createsymbolinteraction.cpp  createsymbolinteraction.h  createtextinteraction.cpp  createtextinteraction.h  deletegeometryinteraction.cpp  deletegeometryinteraction.h  interaction.cpp  interaction.h  interactionmodemanager.cpp  interactionmodemanager.h  (+4 more)
Qt/3DSDK/QtSimple3DInteraction/: application.cpp  application.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  simple3dinteraction.pro  simple3dinteraction.ui
Qt/AcceleratorSDK/QtAcceleratedExample/: AcceleratedSampleCustomDataLayer.cpp  AcceleratedSampleCustomDataLayer.h  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qtacceleratedsample.pro  qtexample.h  qtexample.ui
Qt/AcceleratorSDK/QtDesignerAcceleratedSample/: AcceleratedSampleCustomDataLayer.cpp  MapLink.qrc  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maplinkwidget.cpp  maplinkwidget.h  qtdesigner.pro
Qt/CoreSDK/OGCViewer/: main.cpp  ogcviewer.pro  ogcviewer.rc
Qt/CoreSDK/QtInteractionModes/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qtinteractionmodes.rc  qtinteractionmodes.ui  qtinteractionmodesexample.pro  resource.h
Qt/CoreSDK/QtMapLinkDrawingSurfaceExample/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qtexample.cpp  qtexample.ui  qtmaplinkdrawingsurfaceexample.pro
Qt/EditorSDK/QtEditorInteractionModes/: MapLink.qrc  application.cpp  application.h  editor.ini  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qteditorinteractionmodes.rc  qteditorinteractionmodes.ui  qteditorinteractionmodesexample.pro  resource.h  textentrydialog.cpp  textentrydialog.h  textentrydialog.ui  tms_msgs.msg
Qt/OSGEarthSample/: MapLink.qrc  main.cpp  mainwindow.cpp  mainwindow.h  maplinkosgearthsample.pro  maplinktrackmanager.cpp  maplinktrackmanager.h  maplinktrackobject.cpp  maplinktrackobject.h  osgearthsample.rc  osgearthsample.ui  osgearthsampleconfig.h  resource.h  simulationOptions.ui  simulationoptionsdialog.cpp  simulationoptionsdialog.h  viewereventfilter.cpp  viewereventfilter.h
Qt/OpenGLSurface/AdvancedSample/: AddWaypointInteractionMode.cpp  AddWaypointInteractionMode.h  MapLink.qrc  README.txt  Util.h  advancedsample.pro  advancedsample.rc  application.cpp  application.h  layermanager.cpp  layermanager.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  resource.h
Qt/OpenGLSurface/KMLDataLayerSample/: MapLink.qrc  application.cpp  application.h  attributetreewidget.cpp  attributetreewidget.h  kmldatalayersample.pro  kmldatalayersample.rc  kmldatalayersample.ui  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h
Qt/OpenGLSurface/OpenGLC2Sample/: main.cpp  openglc2sample.pro  openglc2sample.rc
Qt/OpenGLSurface/OpenGLSurfaceQPainter/: README.TXT  application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkqpaintersample.rc  maplinkwidget.cpp  maplinkwidget.h  offscreenrender.cpp  offscreenrender.h  resource.h  simpleglsample.pro
Qt/OpenGLSurface/SimpleGLSurfaceSample/: MapLink.qrc  application.cpp  application.h  main.cpp  mainwindow.cpp  maplinkwidget.cpp  maplinkwidget.h  simpleglsample.pro  simpleglsample.rc  simpleglsample.ui
Qt/OpenGLSurface/SimpleGLSurfaceSampleQOpenGLWidget/: application.cpp  application.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  resource.h  simpleglsample.pro  simpleglsample.rc  simpleglsample.ui
Qt/QtEventManager/: .gitignore  MapLink.qrc  application.cpp  application.h  clientconnectionthread.cpp  clientconnectionthread.h  clientmanager.cpp  clientmanager.h  interactionmodetracks.cpp  interactionmodetracks.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qteventmanager.rc  qteventmanager.ui  qteventmanagerexample.pro  resource.h
Qt/QtTrackManager/: CMakeLists.txt  MapLink.qrc  README.md  application.cpp  application.h  configurationsettings.cpp  configurationsettings.h  displaytrack.cpp  displaytrack.h  main.cpp  mainwindow.cpp  mainwindow.h  maplinkwidget.cpp  maplinkwidget.h  qttrackmanager.rc  qttrackmanager.ui  qttrackmanagerexample.pro  resource.h  symbolset.h  trackinformation.h  trackssampleconfig.xml  trackssimulator.cpp  trackssimulator.h  ui_qttrackmanager.h
Qt/qpixmapexample/: CMakeLists.txt  README.md  main.cpp  qpixmapexample.pro
dotnet/MovingFeaturesSampleWPF/: readme.md
dotnet/MovingFeaturesSampleWPF/DrawingSurfacePanel/: AssemblyInfo.cs  CustomInteractionModeZoomPan.cs  DrawingSurfacePanel.csproj  IMapLayer.cs  IPanel.cs  IUiHandler.cs  InteractionModeRequestReceiver.cs  MapViewerPanel.cs  MapViewerPanel.resx  MapViewerParentPanel.cs  TooltipTextProvider.cs
dotnet/MovingFeaturesSampleWPF/MovingFeaturesSample/: App.config  App.xaml  App.xaml.cs  DockManager.cs  DockableWindow.cs  EmptyWindow.xaml  EmptyWindow.xaml.cs  LayerProperty.cs  LayerSelector.cs  MainWindow.xaml  MainWindow.xaml.cs  MapLayers.xml  MapPropertiesSummaryProvider.cs  Maps.cs  MovingFeaturesSample.csproj  MovingFeaturesSample.sln
dotnet/MovingFeaturesSampleWPF/WpfMaths/: Cartesian.cs
(+4157 files in other folders)
